# fft-svelte-rs

./: Cargo.toml  README.md  TODO.md
src/: convolver.rs  frft.rs  frft2.rs  iter.rs  lib.rs  sinc.rs  sinc_interp.rs
www/: package.json  svelte.config.js  vite.config.ts
www/src/: app.html
www/src/lib/: index.ts
www/src/routes/: +page.server.ts  +page.svelte  intro.svelte  scene.ts
www/src/routes/lines/: LineMaterial.js  LineSegments.js  LineSegmentsGeometry.js
