[package]
name = "fftwasm"
version = "0.2.0"
description = "Discrete Fourier Transform in Svelte+ThreeJS+Rust+WASM"
authors = ["Laszlo Korte <laszlokorte@users.noreply.github.com>"]
edition = "2018"
repository = 'https://github.com/laszlokorte/svelte-rust-fft'

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
frft2 = []

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rustfft = "6.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
assert_approx_eq = "1.1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
